tests/ui/consts/enum-discr-type-err.stderr
error[E0308]: mismatched types
  --> $DIR/enum-discr-type-err.rs:18:21
   |
LL | / macro_rules! mac {
LL | |     ($( $v: ident = $s: ident,)*) => {
LL | |         enum E {
LL | |             $( $v = $s::V, )*
   | |                     ^^^^^ expected `isize`, found `i32`
...  |
LL | |     }
LL | | }
   | |_- in this expansion of `mac!`
LL |
LL | / mac! {
LL | |     A = F,
LL | |     B = T,
LL | | }
   | |_- in this macro invocation

error[E0308]: mismatched types
  --> $DIR/enum-discr-type-err.rs:18:21
   |
LL | / macro_rules! mac {
LL | |     ($( $v: ident = $s: ident,)*) => {
LL | |         enum E {
LL | |             $( $v = $s::V, )*
   | |                     ^^^^^ expected `isize`, found `i32`
...  |
LL | |     }
LL | | }
   | |_- in this expansion of `mac!`
LL |
LL | / mac! {
LL | |     A = F,
LL | |     B = T,
LL | | }
   | |_- in this macro invocation

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
